codepkg/objects/Funded_Program__c.object
<CustomObject>
    <description>This object is used to store the information about received funding with programs.</description>
    <fields>
        <fullName>Date_Funding_Received__c</fullName>
        <description>Date of Funding Received.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of Funding Received.</inlineHelpText>
        <label>Date Funding Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HH_Application__c</fullName>
        <label>HH Application</label>
        <referenceTo>HH_Application__c</referenceTo>
        <relationshipLabel>Funded Programs (CWMP Application)</relationshipLabel>
        <relationshipName>Funded_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Program_Name__c</fullName>
        <description>Other Program Name, If the Funding is received from any other Program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Other Program Name, If the Funding is received from any other Program.</inlineHelpText>
        <label>Other Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Program Name from the Funding received.</description>
        <inlineHelpText>Program Name from the Funding received.</inlineHelpText>
        <label>Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FEMA Hazard Mitigation Grant Program (HMGP)</fullName>
                </value>
                <value>
                    <fullName>State Funding</fullName>
                </value>
                <value>
                    <fullName>Community Development Block Grant (CDBG)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Funded Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Other_Program_Name__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Date_Funding_Received__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>HH_Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Funded Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funded Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>